# QuantumDB

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DATABASE_SCHEMA.md  DATA_POPULATION.md  Dockerfile  FEATURES.md  NEXT_STEPS.md  README.md  RUST_GUIDE.md  TESTING.md  docker-compose.yml  docker-init.sh
.claude/: settings.local.json
.sqlx/: query-0651dd0b78a42b07417af3ff8856e7ade308a9fd074a44c28979b00908cd4586.json  query-0c00417147d50ad50603da46f45019a55650e9a114077bbc7cbb122006ba449e.json  query-1265284be0b971d835ceb525d118479b525369f4cc0cf979b6212217d6f6f08b.json  query-14f2b37f3f1f633801f35d8fba1fb08435aa09a5eca123f443b0182c22f95299.json  query-155d37e6847852f6deadb7e20eb31e9670ab529c7f4c63f2f354e13a4f75f259.json  query-232fc6286265f44d82276fc4b771fa0ebdb98dc7499e5847a69f64ed24cca6c7.json  query-236dc19f65d234524adc41e44918f49267a8aee844e2aa2fe610c65af498dc0d.json  query-27c6ee2e792395633d3601fcf70b890a41fca50a2554b1a8f75a1c5e68e0e212.json  query-29c63869545a89d83c68251d83153594d09c5323723f7fe5ddb906ccd719eb25.json  query-39f148e61331fc652ab81b698f87ef440b8d158a574e24b9e6bf69317fc36e96.json  query-3bb7c8b5688d9a4beb41dfeb7ff03fd22008a337aa7a56d8718a6a5048aed7e4.json  (+58 more)
tools/scrape_committees/: Cargo.toml  README.md  TQC_COMMITTEE_SOURCES.md  debug_qip.py  import_from_csv.py  requirements.txt  scrape_committees.py  scrape_to_csv.py  scrape_tqc_historical.py  test_data.json  test_qip_parse.py  test_qip_scraper.py
tools/scrape_committees/scraped_data/: qcrypt_2011_committees.csv  qcrypt_2012_committees.csv  qcrypt_2013_committees.csv  qcrypt_2014_committees.csv  qcrypt_2015_committees.csv  qcrypt_2016_committees.csv  qcrypt_2017_committees.csv  qcrypt_2018_committees.csv  qcrypt_2019_committees.csv  qcrypt_2020_committees.csv  qcrypt_2021_committees.csv  qcrypt_2022_committees.csv  qcrypt_2023_committees.csv  qcrypt_2024_committees.csv  qip_2000_committees.csv  qip_2001_committees.csv  qip_2002_committees.csv  qip_2005_committees.csv  qip_2006_committees.csv  qip_2008_committees.csv  qip_2011_committees.csv  qip_2013_committees.csv  qip_2016_committees.csv  qip_2018_committees.csv  qip_2019_committees.csv  qip_2020_committees.csv  qip_2023_committees.csv  qip_2026_committees.csv  tqc_2017_committees.csv  tqc_2023_committees.csv  tqc_2024_committees.csv  tqc_2025_committees.csv
tools/scrape_committees/scrapers/: __init__.py  base.py  qcrypt.py  qip.py  tqc.py
tools/scrape_committees/src/: main.rs
(+268 files in other folders)
