[package]
name = "quantumdb"
version = "0.1.0"
edition = "2021"

[lib]
name = "quantumdb"
path = "src/lib.rs"

[[bin]]
name = "quantumdb"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["serde", "v4"] }
time = { version = "0.3", features = ["serde"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
unicode-normalization = "0.1"
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
askama = "0.12"
askama_axum = "0.4"

[dev-dependencies]
axum-test = "17"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serial_test = "3"
